--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendiendo GIT</title>
 </head>
 <body>
-    <h1 class="h1">Hola</h1>
-    <h2>Holis</h2>
-    <h3>Holanda</h3>
+    <h1>Aprendiengo GIT</h1>
+    <p>Mis primeros pasos en el versionado de código    </p>
 </body>
 </html>
