--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo GIT</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Aprendiengo GIT</h1>
+    <h1>Aprendiendo GIT</h1>
     <p>Mis primeros pasos en el versionado de código    </p>
 </body>
 </html>
